Quick dirty fix for overflowing list content

--- a/assets/sass/080-ui-components/_contentlist.scss
+++ b/assets/sass/080-ui-components/_contentlist.scss
@@ -14,6 +14,7 @@
     @include mq(get-mqbreakpoint('medium')) {
         margin-bottom: 0;
         min-width: 0;
+        overflow: hidden;
     }
 }
 
